Set Known issues card top margin and update ethersam known issue list group items with secondary coloring.

--- a/uscc_api/templates/container_status/nas_prod_status.html
+++ b/uscc_api/templates/container_status/nas_prod_status.html
@@ -85,7 +85,7 @@
         </div>
     </div>
 
-    <div class="card border-warning ml-3 mr-3">
+    <div class="card border-warning mt-3 ml-3 mr-3">
         <div class="card-body">
             <h5 class="card-title">Known Issues</h5>
             <div class="accordion mt-3" id="knownIssuesaccordion">
@@ -100,13 +100,13 @@
                             <p>We have found a minor issue with the EtherSAM Nokia Single Site automation. While running the EtherSAM automation a user may experience what appears to be a long response time or lack of updates on the automation progress (while it appears automation has stalled, in fact the automation is continuing to run).</p>
                             To work around this issue:
                             <ul class="list-group">
-                                <li class="list-group-item">1)	Open a new browser session</li>
-                                <li class="list-group-item">2)	Type in your Site ID</li>
-                                <li class="list-group-item">3)	Select the log history</li>
-                                <li class="list-group-item">4)	Select start and end date</li>
-                                <li class="list-group-item">5)	Select show log</li>
-                                <li class="list-group-item">6)	Select “view test results” for the top entry in the list (if there is more than one test result available)</li>
-                                <li class="list-group-item">7)	Tail the active log by periodically doing a browser refresh</li>
+                                <li class="list-group-item list-group-item-secondary">1)	Open a new browser session</li>
+                                <li class="list-group-item list-group-item-secondary">2)	Type in your Site ID</li>
+                                <li class="list-group-item list-group-item-secondary">3)	Select the log history</li>
+                                <li class="list-group-item list-group-item-secondary">4)	Select start and end date</li>
+                                <li class="list-group-item list-group-item-secondary">5)	Select show log</li>
+                                <li class="list-group-item list-group-item-secondary">6)	Select “view test results” for the top entry in the list (if there is more than one test result available)</li>
+                                <li class="list-group-item list-group-item-secondary">7)	Tail the active log by periodically doing a browser refresh</li>
                             </ul>
                             This will be fixed in the next release of the NAS Platform.
                         </div>
