Set Known issues card bottom margin so the border doesn't look broken at the bottom of the page.

--- a/uscc_api/templates/container_status/nas_prod_status.html
+++ b/uscc_api/templates/container_status/nas_prod_status.html
@@ -85,10 +85,10 @@
         </div>
     </div>
 
-    <div class="card border-warning mt-3 ml-3 mr-3">
+    <div class="card border-warning mt-3 ml-3 mr-3 mb-3">
         <div class="card-body">
             <h5 class="card-title">Known Issues</h5>
-            <div class="accordion mt-3" id="knownIssuesaccordion">
+            <div class="accordion" id="knownIssuesaccordion">
                 <div class="card">
                     <div class="card-header bg-warning" id="ethersamUIWorkaroundHeading">
                         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#ethersamUI" aria-expanded="false" aria-controls="ethersamUI">
