Add disclaimer to contact project owner if user guide link shows error messsage.

--- a/uscc_api/templates/container_status/nas_prod_status.html
+++ b/uscc_api/templates/container_status/nas_prod_status.html
@@ -79,6 +79,11 @@
                                 EBA
                             </a>
                         </ul>
+
+                            <p class="card-text">
+                                <small class="text-muted">If presented with the message "Sorry, this site hasn't been shared with you." after clicking a link please reach out to the project owner to have them add you.</small>
+                            </p>
+
                     </div>
                 </div>
             </div>
