Initial commit to master includes following changes:
1. Removal of unnecessary directories and files related to USCC_API repo
2. Removal of unneeded code that was holistically included with being under USCC_API repo
3. Renaming of code components to represent holistic container status application.
3. New lighter requirements.txt file for Openshift deployment.

--- a/container_status_app/templates/container_status/update_container_status.html
+++ b/container_status_app/templates/container_status/update_container_status.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-            <img src="/static/usc_logo.jpg" width="30" class="d-inline-block align-top" alt="U.S. Cellular Logo">
+            <img src="/container_status_app/static/usc_logo.jpg" width="30" class="d-inline-block align-top" alt="U.S. Cellular Logo">
             Update NAS Development Container Status
         </a>
         <form method="POST">
