--- a/container_status_app/templates/container_status/container_status.html
+++ b/container_status_app/templates/container_status/container_status.html
@@ -12,7 +12,7 @@
     <!-- Image and text -->
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-            <img src="/static/usc_logo.jpg" width="30" class="d-inline-block align-top" alt="U.S. Cellular Logo">
+            <img src="/container_status_app/static/usc_logo.jpg" width="30" class="d-inline-block align-top" alt="U.S. Cellular Logo">
             NAS Development Container Status
         </a>
     </nav>
