Change card headers to use Available/Not Available instead of active/not active.

--- a/container_status_app/templates/container_status/nas_prod_status.html
+++ b/container_status_app/templates/container_status/nas_prod_status.html
@@ -32,7 +32,7 @@
             <div class="card-deck">
 {#                {% if cs.overall_status == "NOT ACTIVE" %}#}
                     <div class="card">
-                        <h5 class="card-header bg-danger text-white">NOT ACTIVE</h5>
+                        <h5 class="card-header bg-danger text-white">Not Available</h5>
                         <div class="card-body">
                             <ul class="list-group">
                                 {% for application, app_status in cs.applications.items() %}
@@ -54,7 +54,7 @@
                     </div>
 {#                {% else %}#}
                     <div class="card">
-                        <h5 class="card-header bg-success text-white">ACTIVE</h5>
+                        <h5 class="card-header bg-success text-white">Available</h5>
                         <div class="card-body">
                             {% if cs.overall_status == 'ACTIVE' %}
                                 <ul class="list-group">
