Add additional accordian card for known issue Ethersam Status 423

--- a/container_status_app/templates/container_status/nas_prod_status.html
+++ b/container_status_app/templates/container_status/nas_prod_status.html
@@ -132,6 +132,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="card">
+                    <div class="card-header bg-danger" id="ethersamstatus423Heading">
+                        <button class="btn btn-link btn-block text-left text-white" type="button" data-toggle="collapse" data-target="#ethersam423" aria-expanded="false" aria-controls="ethersam423">
+                            Ethersam Status 423 Error
+                        </button>
+                    </div>
+                    <div id="ethersam423" class="collapse hide" aria-labelledby="ethersamstatus423Heading" data-parent="#knownIssuesaccordion">
+                        <div class="card-body">
+                            <p> While using the Ethersam application if you see a message like the following screenshot below currently the Ethersam application is locked up do to an issue. We are working to resolve this problem as soon as possible.</p>
+                            <img src="/static/ethersam_status423.png" class="img-fluid" alt="Ethersam Status 423 image">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
