Fix List of registered emails not showing after new email register submission.

--- a/container_status_app/templates/container_status/nas_prod_status.html
+++ b/container_status_app/templates/container_status/nas_prod_status.html
@@ -146,6 +146,9 @@
                                 <li class="list-group-item">{{ email }}</li>
                             {% endfor %}
                         </ul>
+                    {% else %}
+                        <div class="alert alert-danger" role="alert">Internal Error: Current list of registered emails couldn't be retrieved please contact SA3 Core
+                            Automation Team</div>
                     {% endif %}
                 </div>
             </div>
