--- a/container_status_app/templates/container_status/nas_prod_status.html
+++ b/container_status_app/templates/container_status/nas_prod_status.html
@@ -13,7 +13,7 @@
     <!-- Image and text -->
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-            <img src="/static/usc_logo.jpg" width="30" class="d-inline-block align-top" alt="U.S. Cellular Logo">
+            <img src={{ url_for('static', filename='usc_logo.jpg') }} width="30" class="d-inline-block align-top" alt="U.S. Cellular Logo">
             NAS Automation Status
         </a>
     </nav>
@@ -184,20 +184,23 @@
                         </div>
                     </div>
                 </div>
-{#                Remove below commented out code with next update#}
-{#                <div class="card">#}
-{#                    <div class="card-header bg-danger" id="ethersamstatus423Heading">#}
-{#                        <button class="btn btn-link btn-block text-left text-white" type="button" data-toggle="collapse" data-target="#ethersam423" aria-expanded="false" aria-controls="ethersam423">#}
-{#                            Ethersam Status 423 Error#}
-{#                        </button>#}
-{#                    </div>#}
-{#                    <div id="ethersam423" class="collapse hide" aria-labelledby="ethersamstatus423Heading" data-parent="#knownIssuesaccordion">#}
-{#                        <div class="card-body">#}
-{#                            <p> While using the Ethersam application if you see a message like the following screenshot below currently the Ethersam application is locked up do to an issue. We are working to resolve this problem as soon as possible.</p>#}
-{#                            <img src="/static/ethersam_status423.png" class="img-fluid" alt="Ethersam Status 423 image">#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
+                <div class="card">
+                    <div class="card-header bg-danger" id="ethersamExfoResultErrorHeading">
+                        <button class="btn btn-link btn-block text-left text-white" type="button" data-toggle="collapse" data-target="#ethersamexfo" aria-expanded="false" aria-controls="ethersam423">
+                            Ethersam Status 423 Error
+                        </button>
+                    </div>
+                    <div id="ethersamexfo" class="collapse hide" aria-labelledby="ethersamExfoResultErrorHeading" data-parent="#knownIssuesaccordion">
+                        <div class="card-body">
+                            <p> There is a problem retrieving the test results during the <strong>Test Execution</strong> of an Ethersam Site Test in our Exfo system.
+{#                            <p>If you see a message like the below screen-shot, your selected test has successfully executed in Exfo and the results are recorded there.#}
+{#                            Please log into the Exfo Web application and find your results there. The Ethersam application will continue on with the rest of the workflow#}
+{#                            steps.</p>#}
+                            <p>We apologize for this inconvenience and are working to restore the ability to retrieve test results in the Ethersam application directly.</p>
+                            <img src={{ url_for('static', filename='ethersam_exfo_results_error.png') }} class="img-fluid" alt="Ethersam Exfo Results Error">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
