Update HTML for "Available" card to pull application status from correct nested JSON structure.

--- a/container_status_app/templates/container_status/nas_prod_status.html
+++ b/container_status_app/templates/container_status/nas_prod_status.html
@@ -63,7 +63,7 @@
                             {% if cs.overall_status == 'ACTIVE' %}
                                 <ul class="list-group">
                                     {% for application, app_status in cs.applications.items() %}
-                                        {% if app_status == 'ACTIVE' %}
+                                        {% if app_status.status == 'ACTIVE' %}
                                             <li class="list-group-item">{{application}}</li>
                                         {% endif %}
                                     {% endfor %}
