--- a/container_status_app/templates/container_status/nas_notify.html
+++ b/container_status_app/templates/container_status/nas_notify.html
@@ -76,7 +76,10 @@
                         {% endif %}
                     </div>
                 </div>
-
+                <div class="form-group col-auto">
+                    <label for="whyOutage">Reason(optional)</label>
+                    <textarea class="form-control" name="reason_textarea" id="whyOutage" rows="3"></textarea>
+                </div>
                 <button type="submit" class="btn btn-primary mt-2">Submit</button>
             </form>
         </div>
