Page can't be rendered when NAS Platform overall status set to 'NOT ACTIVE'
Need to use jinja2 dict.update() method to override dictionary key values
now that applications have a nested dictionary. (i.e. 'status' and 'additional_info')

--- a/container_status_app/templates/container_status/nas_prod_status.html
+++ b/container_status_app/templates/container_status/nas_prod_status.html
@@ -37,7 +37,8 @@
                             <ul class="list-group">
                                 {% for application, app_status in cs.applications.items() %}
                                     {% if cs.overall_status == 'NOT ACTIVE' %}
-                                        {%  set app_status.status  = 'NOT ACTIVE' %}
+                                        {%  set temp = app_status.update({'status': 'NOT ACTIVE'}) %}
+                                        {% set temp = app_status.update({'additional_info': ""}) %}
                                     {% endif %}
                                     {% if app_status.status == 'NOT ACTIVE' %}
                                         <li class="list-group-item">{{application}}
